--- a/css/style.css
+++ b/css/style.css
@@ -42,9 +42,17 @@ footer a:hover {
 .social-links {
 	list-style: none;
 	padding-left: 0;
+	
+	display: -webkit-flex;
 	display: flex;
+	
+	-webkit-flex-wrap: wrap;
 	flex-wrap: wrap;
+	
+	-webkit-justify-content: space-around;
 	justify-content: space-around;
+	
+	-webkit-align-items: center;
 	align-items: center;
 }
 
