--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,18 @@
 	text-align: center;
 }
 
+@media (max-width: 1035px) and (min-width: 600px) {
+  .main {
+    min-width: 520px;
+  }
+}
+
+@media (max-width: 599px) {
+  .main {
+    width: 80%;
+  }
+}
+
 h1 {
 	font-family: "Droid Serif", Georgia, serif;
 	font-weight: normal;
@@ -37,6 +49,10 @@ footer a:hover {
 .small {
 	font-weight: 200;
 	font-size: 0.85em;
+}
+
+.small b {
+  font-weight: 400;
 }
 
 .social-links {
